Testing home bug fix on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -326,15 +326,24 @@ footer {}
     }
 
     .home {
-        gap: 4rem;
-        padding: 35% 5.5% 5% 5.5%;
+        gap: 2.5rem;
+        padding: 22.5% 5.5% 5% 5.5%;
     }
 
     .home h1 {
-        font-size: 3.25rem;
+        font-size: 3rem;
+        margin-bottom: 0.75rem;
+    }
+
+    .home p {
+        font-size: 1.5rem;
+    }
+
+    .home a {
+        padding: 0.5rem 1.5rem;
     }
 
     .home-right {
-        width: 100%;
+        width: 90%;
     }
 }
